projects/web/src/app/features/ecommerce/checkout/pages/checkout-step-order-review/checkout-step-order-review.component.scss
@use 'styles' as *; // Relative to "projects/web/src" because of angular.json > projects.web.architect.build.options.stylePreprocessorOptions.includePaths

// Order Products List
.order-products-list {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

// Pay Now Container
.pay-now-container {
    position: fixed;
    width: 100%;
    bottom: 0;

    border-top: 1px solid var(--N200);
    box-shadow: 0px -4px 4px 0px rgba(0, 0, 0, 0.05);

    padding: 32px calc(var(--bs-gutter-x) * 0.5);

    background-color: white;

    display: flex;
    gap: 24px;
}

.pay-now-copy {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 4px;
}

.pay-now-copy-label {
    @include body-14px-regular;
    color: var(--N600);
}

.pay-now-copy-price {
    @include label-20px-semi-bold;
    color: var(--N800);
}

.pay-now-button-container {
    flex: 1;

    display: flex;
    flex-direction: column;
    justify-content: center;
}

.pay-now-button-container button {
    height: 100%;
}

